--- a/src/Page/content.css
+++ b/src/Page/content.css
@@ -1,7 +1,6 @@
 .mainContent {
-  margin-bottom: 50px;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin: auto;
+  width: 85%;
 }
 .mainContent span {
   font-size: 15px;
@@ -41,33 +40,40 @@
   margin: auto;
 }
 
-@media screen and (max-width: 1500px) {
-  .mainContent {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-  }
+.list-posts .title {
+  color: rgb(0, 0, 0, 0.7);
+  display: block;
+  font-size: 32px;
+  font-family: monospace;
+  letter-spacing: -2px;
+  margin: 10px 0px;
 }
-
-@media screen and (max-width: 1100px) {
-  .mainContent {
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-  }
+.list-posts .title:hover {
+  cursor: pointer;
+  color: rgb(0, 0, 0, 1);
 }
-
-@media screen and (max-width: 800px) {
-  .mainContent {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
+.list-posts .description {
+  color: rgb(0, 0, 0, 0.7);
+  display: block;
+  font-size: 20px;
+  margin: 10px 0px;
 }
-@media screen and (max-width: 500px) {
-  .mainContent {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-  }
+.list-posts .author {
+  color: rgb(0, 0, 0, 0.5);
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  font-family: serif;
+  margin: 10px 0px;
+}
+.list-posts .edit-post {
+  text-align: right;
+}
+.list-posts .edit-post a {
+  opacity: 50%;
+  color: #000;
+}
+.list-posts .edit-post a:hover {
+  cursor: pointer;
+  opacity: 100%;
 }
